external-crates/move/crates/move-compiler/tests/move_2024/matching/const_visibility.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/move_2024/matching/const_visibility.move:13:13
   │
 3 │     const Z: u64 = 0;
   │           - The constant '0x42::m::Z' is internal to its module. Declare it 'public(package)' to allow access from other modules in its package
   ·
13 │             m::Z => 0,
   │             ^^^^ Invalid access of '0x42::m::Z'
